# elena

./: .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md  Trunk.toml  package-lock.json  package.json  pnpm-lock.yaml  start_dev.sh  tailwind.config.js  verify.sh
.github/workflows/: deploy.yml
docs/: design.md  plan.md  requirements.md
frontend/: Cargo.toml  index.html
frontend/public/: _redirects
frontend/src/: api.rs  lib.rs
frontend/src/components/: card.rs
frontend/src/pages/: correlation.rs  dashboard.rs  detail.rs  mod.rs
shared/src/: lib.rs
worker/: Cargo.toml  wrangler.toml
worker/.wrangler/tmp/bundle-IRFAyS/: middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-iqRiYO/: middleware-insertion-facade.js  middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-j9eVMN/: middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-oqyLsd/: middleware-loader.entry.ts
worker/.wrangler/tmp/dev-1NxQYp/: a85a8dd1a506810a1801c99625a6f9f0301a6959-index.wasm  shim.js  shim.js.map
worker/.wrangler/tmp/dev-2QszuJ/: f3bf38174de63cdb291948834265a0c6d91a3335-index.wasm  shim.js  shim.js.map
worker/src/: lib.rs
