[workspace]
members = [
    "frontend",
    "worker",
    "shared",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock", "wasmbind"] }
shared = { path = "./shared" }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 16
opt-level = "s" # Optimize for size (good for WASM/Workers)
panic = "abort" # Reduce binary size and compile time
