[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
shared = { workspace = true }
gloo-net = "0.6.0"
