[package]
name = "elena-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }
futures = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
