[package]
name = "elena-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
shared = { workspace = true }
futures-util = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
